feat: add cupcake image in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div>
-        <img src="" alt="" />
+        <img src="assets/images/main-image.png" alt="cupcakes image" />
       </div>
       <section id="about">
         <h1>Cupcake de café com chantilly</h1>
